# flutter_workout

./: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/workout/: WorkoutPlugin.kt
android/src/main/kotlin/dev/rexios/workout/: WorkoutPlugin.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/ios/workoutExample Watch App/: ContentView.swift  workoutExampleApp.swift
example/lib/: main.dart
example/test/: widget_test.dart
example/tizen/: tizen-manifest.xml
ios/: workout.podspec
ios/Classes/: WorkoutPlugin.swift
lib/: workout.dart  workout_reading.dart  workout_session.dart
lib/src/: exercise_type.dart  workout_base.dart  workout_reading.dart  workout_session.dart
lib/src/model/: exercise_type.dart  workout_feature.dart  workout_location_type.dart  workout_reading.dart  workout_start_result.dart  workout_swimming_location_type.dart
test/: workout_test.dart
tizen/: CMakeLists.txt  project_def.prop
tizen/inc/: health_tizen_plugin.h  workout_plugin.h
tizen/src/: health_tizen_plugin.cc  log.h  workout_plugin.cc
(+2 files in other folders)
